[package]
name = "continuations"
version = "0.1.0"
authors = ["Davis Silverman <sinistersnare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lasso = "*"
im = "15" # TODO: maybe use im-rc cause we dont need thread-safe?
generational-arena = "*" # TODO: pin this version down more?
